Puzzle 15 task completion
Puzzle 15 for 8 tiles
File Changes:
algo.js, which has algorithm written in vanilla JavaScript
style.css, which has all the styling code for this task
index.html, changes in header and script addition of algo.js

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Puzzle test</title>
+		<link rel="stylesheet" href="style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<!-- Do not edit any html in the body tag -->
@@ -20,4 +22,5 @@
 			<figcaption>A Puzzle</figcaption>
 		</figure>
 	</body>
+	<script src="algo.js" ></script>
 </html>
